#VERSION 0.9.5#
 
 - added method getSchemaName() in Peak_Model_Zendatable and modified methods save(), count() and exists() to use it
 - fixed a variable name error introduced in the last change in cleanArray() of Peak_Model_Zendatable
 - fixed a potential problem with save() in Peak_Model_Zendatable by changing isset for array_key_exists
 - fixed a potential problem with cleanArray() in Peak_Model_Zendatable by changing isset for array_key_exists
 - added protected property $_db to Peak_Model_Zendatable to prevent use of db adapter object outside of the model
 - minor refactoring of method count() in Peak_Model_Zendatable
 - fixed a notice about array to string conversion in method _proccessVariables() of class Peak_View_Render_VirtualLayouts
 - fixed method addAction() in Peak_Codegen_Controller to discard empty action name
 - changed the path of internal module in Peak_Application_Modules
 - added bind param to method query() in Peak_Model_Zendatable
 - added a new param method to model() from Peak_Controller_Action to allow injection of param(s) into the model constructor
 - added better zend_db profiler infos in Peak_View_Helper_Debugbar + minor css change in debugbar.css
 - added few enhancements in debugbar.js and debugbar.css
 - fixed some js functions to use properly window size for panels in debugbar.js
 - removed deprecated file appcreate.php
 - removed vendor Geshi
 - updated css twitter bootstrap in Peak_Controller_Internal_Pkdoc and Peak_Controller_Internal_Pkwelcome
 - updated vendor twitter bootstrap to 2.2.1 and remove version folder to avoid changing integration url each time
 - fixed a bug in Peak_Controller_Internal_Pkdoc introduced by changes of Peak_View_Render_VirtualLayouts in previous version

#VERSION 0.9.4#

 - added method cleanUnknownVars() and property $_clean_all_unknown_vars in Peak_View_Render_VirtualLayouts
 - modified method initConfig in Peak_Core to support absent or unsupported application config by using genericapp.ini 